--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,30 @@
-header {
+header.header-menu {
     background: #000;
     padding: 5px;
 }
 
-header h1 {
+header.header-menu h1 {
     font-size: 31px;
     color: #fff;
     text-transform: uppercase;
+}
+
+header.header-menu nav {
+    float: right;
+    margin-top: 4%;
+}
+
+header.header-menu nav ul li {
+    padding: 0 29px 0 0 !important;
+}
+
+header.header-menu nav ul li a {
+    font-size: 15px;
+    color: #fff;
+    font-weight: bold;
+}
+
+header.header-menu nav ul li a:hover {
+    text-decoration: none;
+    color: #fff;
 }
