--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,9 +22,26 @@ header.header-menu nav ul li a {
     font-size: 15px;
     color: #fff;
     font-weight: bold;
+    text-decoration: none;
 }
 
 header.header-menu nav ul li a:hover {
     text-decoration: none;
     color: #fff;
+}
+
+.btn {
+    margin-right: 5px;
+}
+
+.tableActions {
+    width: 105px;
+}
+
+.contactForm {
+    padding-bottom: 65px;
+}
+
+.margin-phone-register {
+    margin-top: 25px;
 }
